fix: corrindo tolists etapaservice